Bugfix user's first visit/login
Session Component contains the code that populates the users database.
The code is inneffecient and tries to do too much too soon.
Break up the code in the component routes instead 
/session - classrooms
/topics - class chapters
/studyroom - course questions

This way firebase is populating the user database as needed instead of sending hundreds of server requests upon the users first visit.

--- a/src/components/Session/Session.css
+++ b/src/components/Session/Session.css
@@ -7,7 +7,7 @@
 .Session{
     min-height: 100vh;
 
-    background: url('https://res.cloudinary.com/eduprojectsil/image/upload/v1555781737/SKY-TEST_gjf6ca.png');
+    background: url('https://res.cloudinary.com/eduprojectsil/image/upload/v1533687594/skyimg_ykozcc.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
